# stdlibs

./: .readthedocs.yml  CHANGELOG.md  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
docs/: api.rst  conf.py  inclusion.rst  index.rst
docs/_static/: custom.css
stdlibs/: __init__.py  __version__.py  fetch.py  fetch_releases.py  known.py  py.py  py2.py  py23.py  py24.py  py25.py  py26.py  py27.py  py3.py  py30.py  py31.py  py310.py  py311.py  py312.py  py313.py  py314.py  py315.py  py32.py  py33.py  py34.py  py35.py  py36.py  py37.py  py38.py  py39.py  releases.toml
stdlibs/lists/: 2.3.txt  2.4.txt  2.5.txt  2.6.txt  2.7.txt  3.0.txt  3.1.txt  3.10.txt  3.2.txt  3.3.txt  3.4.txt  3.5.txt  3.6.txt  3.7.txt  3.8.txt  3.9.txt  all.txt  all2.txt  all3.txt
stdlibs/tests/: __init__.py  __main__.py
