[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stdlibs"
author = "John Reese"
author-email = "john@noswap.com"
description-file = "README.md"
home-page = "https://stdlibs.omnilib.dev"
requires = []
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.flit.metadata.urls]
Documentation = "https://stdlibs.omnilib.dev/en/latest/"
Github = "https://github.com/omnilib/stdlibs"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "stdlibs"
package = "stdlibs"
version_file = true
signed_tags = true

[tool.coverage.run]
branch = true
include = ["stdlibs/*"]
omit = ["stdlibs/tests/*"]

[tool.coverage.report]
fail_under = 100
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.7"
strict = true

