[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stdlibs"
readme = "README.md"
license = {file="LICENSE"}
dynamic = ["version", "description"]
authors = [
    {name="Amethyst Reese", email="amy@n7.gg"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "attribution==1.7.1",
    "black==24.4.2",
    "coverage==7.5.1",
    "flake8==7.0.0",
    "flit==3.9.0",
    "mypy==1.10.0",
    "packaging==24.0",
    "ufmt==2.6.0",
    "usort==1.0.8.post1",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-mdinclude==0.6.0",
]

[project.urls]
Homepage = "https://stdlibs.omnilib.dev"
Documentation = "https://stdlibs.omnilib.dev/en/latest/"
Github = "https://github.com/omnilib/stdlibs"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "stdlibs"
package = "stdlibs"
ignored_authors = ["dependabot"]
version_file = true
signed_tags = true

[tool.coverage.run]
branch = true
include = ["stdlibs/*"]
omit = ["stdlibs/tests/*"]

[tool.coverage.report]
fail_under = 100
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"
strict = true

